crates/metastore/src/snapshots/embucket_metastore__metastore__tests__duplicate_volume.snap
---
source: crates/metastore/src/metastore.rs
expression: result
---
Err(
    VolumeAlreadyExists {
        volume: "test",
    },
)
