crates/metastore/src/snapshots/embucket_metastore__metastore__tests__update_volume.snap
---
source: crates/metastore/src/metastore.rs
expression: "(rwo1, rwo2)"
---
(
    RwObject {
        data: IceBucketVolume {
            ident: "test",
            volume: Memory,
        },
        created_at: "TIMESTAMP",
        updated_at: "TIMESTAMP",
    },
    RwObject {
        data: IceBucketVolume {
            ident: "test",
            volume: File(
                IceBucketFileVolume {
                    path: "/tmp",
                },
            ),
        },
        created_at: "TIMESTAMP",
        updated_at: "TIMESTAMP",
    },
)
